--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.fragment.app.FragmentContainerView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/fragment_container"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="16dp">
+
+    <TextView
+        android:id="@+id/question_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        android:padding="16dp"
+        android:text="Question will be here" />
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/mercury"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/mercury" />
+
+            <Button
+                android:id="@+id/venus"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/venus" />
+
+            <Button
+                android:id="@+id/earth"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/earth" />
+
+            <Button
+                android:id="@+id/mars"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/mars" />
+
+            <Button
+                android:id="@+id/jupiter"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/jupiter" />
+
+            <Button
+                android:id="@+id/saturn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/saturn" />
+
+            <Button
+                android:id="@+id/uranus"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/uranus" />
+
+            <Button
+                android:id="@+id/neptune"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/neptune" />
+        </LinearLayout>
+    </ScrollView>
+
+    <TextView
+        android:id="@+id/answer_feedback"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textSize="18sp"
+        android:padding="16dp"
+        android:visibility="gone"
+        android:text="Feedback will be here" />
+
+</LinearLayout>
